tests/script_runtime_errors/subslice_end_lt_start/error.txt
Error: 
    2 | event[2:k]
      |       ^^^ A range's end cannot be smaller than its start, 2:1 is invalid
